(lang dune 3.6)

(name otracer)

(generate_opam_files true)

(source
 (github jorjiiie/otracer))

(authors "jorjiiie")

(maintainers "jorjiiie")

(license LICENSE)


(package
 (name otracer)
 (synopsis "Ray Tracer in OCaml")
 (description "Basic Path Tracer in OCaml")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
